--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,4 +13,4 @@ compatibility_date = "2023-05-26"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
 PASSWORD = "xiavpn"
-PROXYIP = "proxy-sg.tidur.cfd"
+proxyIPs = "proxy-sg.tidur.cfd"
