--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,4 +13,4 @@ compatibility_date = "2023-05-26"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
 PASSWORD = "xiavpn"
-proxyIPs = "213.35.123.85"
+PROXYIP = "213.35.123.85"
